# crlserver

./: .gitignore  BSDmakefile  CMakeLists.txt  GNUmakefile  Makefile  README  README.md  aux.c  aux.h  conf.c  conf.h  crlserver.h  db-ldap.c  db-sqlite.c  db.h  extern.c  filter.c  games.c  games.h  general_menu.c  general_menu.h  init.c  init.h  log.c  log.h  login.c  main.c  menu.c  menu.h  menus.c  menus.h  pathnames.h  register.c  rlmenu.c  rlmenu.h  rlsqlite.c  rlsqlite.h  session.h  sqlite.c  test_form.c
compat/: fparseln.c  util.h
crlsdir/: sample.conf
crlsdir/editors/: ee  virus
crlsdir/games/: hack  larn  nethack  rogue
crlsdir/menus/: login.txt  register.txt  user.txt
crlsdir/misc/: nethackrc
data/: sample.conf
data/filters/: hack  nethack  rogue
data/menus/: banner.txt  games.txt
editors/: GNUmakefile  Makefile  ee.c  virus.c
games/: hack  larn  nethack  rogue
include/: conf.h  crlserver.h  db.h  filter.h  init.h  list.h  log.h  menus.h  pathnames.h  session.h
menus/: banner.txt  games.txt  general.txt  login.txt  register.txt  server_info.txt
util/cmake/: FindCONFUSE.cmake  FindLDAP.cmake  FindSQLITE.cmake
